# ytdl-api

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.yaml  docker-compose.yaml  fly.toml  pyproject.toml
.github/workflows/: default.yml  deploy.yml  test.yml  testing.yml
.opencode/skills/linting/: SKILL.md
.opencode/skills/project-testing/: SKILL.md
.opencode/skills/version-bump/: SKILL.md
infrastructure/: .terraform.lock.hcl  project.tf  provider.tf  service.tf  variables.tf
init-db/: init.sql
scripts/: run_devserver.sh  run_pyclean.sh  run_pytest.sh
tests/: conftest.py  fixtures.json  test_commands.py  test_config.py  test_utils.py  utils.py
tests/downloaders/: test_pytube_downloader.py  test_ytdlp_downloader.py
tests/endpoints/: test_delete.py  test_download.py  test_get_downloads.py  test_health.py  test_preview.py  test_retry.py  test_version.py
tests/fixtures/: invalid_po_token.json  valid_po_token.json
tests/storage/: test_deta_storage.py
ytdl_api/: asgi.py  callbacks.py  commands.py  config.py  constants.py  datasource.py  dependencies.py  downloaders.py  endpoints.py  enpoints_403.py  exceptions.py  po_token.json  queue.py  storage.py  types.py  utils.py
ytdl_api/config/: __init__.py  datasources.py  settings.py  storages.py
ytdl_api/db/: __init__.py  table.py
ytdl_api/schemas/: base.py  models.py  requests.py  responses.py
