[tool.pytest.ini_options]
addopts = "--cov-report xml:cov.xml"
norecursedirs = [
    ".venv",
    ".vscode",
    "__pycache__"
]
python_files = [
    "test_*.py"
]
python_functions = [
    "test_*"
]

[tool.coverage.run]
omit = [
    ".venv/*",
    "tests/*",
    "asgi.py"
]

[tool.mypy]
python_version = "3.10"
plugins = [
    "pydantic.mypy"
]
allow_untyped_globals = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = false

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist"
]

fixable = ["I001", "F401", "W291", "W292"]
# Same as Black.
line-length = 120
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.per-file-ignores]
"poetry.lock" = ["E501"]

[tool.poetry]
name = "ytdl-api"
version = "1.4.1"
description = "API for web-based youtube-dl client"
authors = ["Nazar Oleksiuk <nazarii.oleksiuk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
youtube-dl = "*"
fastapi = "^0.98.0"
uvicorn = "^0.18.2"
sse-starlette = "^0.6.1"
aiofiles = "^0.6.0"
deta = "^1.1.0"
ffmpeg-python = "^0.2.0"
confz = "^1.6.1"
pyhumps = "^3.7.2"
pytube = {git = "https://github.com/oncename/pytube.git"}
yt-dlp = "^2023.7.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pdbpp = "^0.10.2"
requests = "^2.23.0"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
pre-commit = "^2.18.1"
mypy = "1.0.0"
types-setuptools = "^62.6.1"
pytest-mypy = "^0.9.1"
pyclean = "^2.2.0"
pytest-mock = "^3.10.0"
httpx = "^0.23.3"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
