[project]
name = "ytdl-api"
version = "1.12.0"
description = "API for web-based youtube-dl client"
authors = [{ name = "Nazar Oleksiuk", email = "nazarii.oleksiuk@gmail.com" }]
requires-python = ">=3.11,<4"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.135.3,<0.136",
    "uvicorn>=0.18.2,<0.19",
    "sse-starlette>=0.6.1,<0.7",
    "aiofiles>=0.6.0,<0.7",
    "ffmpeg-python>=0.2.0,<0.3",
    "confz==2.0.1",
    "pyhumps>=3.7.2,<4",
    "pytube>=15.0.0,<16",
    "yt-dlp==2026.03.17",
    "humanize>=4.8.0,<5",
    "croniter>=2.0.5,<3",
    "tinydb>=4.8.2,<5",
]

[tool.uv.build-backend]
module-name = "ytdl_api"
module-root = ""

[tool.pytest.ini_options]
addopts = "--cov-report xml:cov.xml"
norecursedirs = [
    ".venv",
    ".vscode",
    "__pycache__"
]
python_files = [
    "test_*.py"
]
python_functions = [
    "test_*"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "coverage[toml]>=7.6.4,<8",
    "pyclean>=2.2.0,<3",
    "pytest-mock>=3.10.0,<4",
    "httpx>=0.27.0,<0.28",
    "ruff>=0.7.3,<0.8",
    "pytest-asyncio>=0.23.7,<0.24",
]

[tool.coverage.run]
omit = [
    ".venv/*",
    "tests/*",
    "asgi.py"
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
# Same as Black.
line-length = 120
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I001", "I002"]
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist"
]

fixable = ["I001", "F401", "W291", "W292"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"uv.lock" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.isort]
profile = "black"
